--- a/WEB NHẠC/style.css
+++ b/WEB NHẠC/style.css
@@ -181,5 +181,5 @@ header {
   transition: max-height 0s ease;
 }
 .song-list.show {
-  max-height: 300px; /* Adjust the height as needed */
+  max-height: 1000px;
 }
